# aurora-model

./: LICENSE  MANIFEST.in  README.md  setup.cfg
auroramodel/: __init__.py  cross_sections.py  electrons.py  emission_model.py  energy_levels.py  general.py  mcmc.py  observations.py
auroramodel/anc/: rcparams.mplstyle
