[metadata]
name = auroramodel
version = 1.1.0
author = Zachariah Milby and Katherine de Kleer
description = A model for retrieving atmospheric compositions from Galilean satellite optical aurora emissions.
home_page = https://github.com/zachariahmilby/aurora-model

[options]
include_package_data = True
python_requires >= 3.10.0
packages = find:
install_requires =
   hiresaurora>=2.2.0
   numpy==1.22.3
   matplotlib==3.7.1
   astropy==5.3.2
   lmfit==1.0.3
   scipy==1.8.0
   pandas==1.5.2
   corner==2.2.2
   emcee==3.1.3
